--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Space Ripples Reveal Big Bang's Smoking Gun - New York Times</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -25,7 +25,7 @@
         <h1 class="main-title container">Space Ripples Reveal Big Bang’s Smoking Gun</h1>
       <figure class="feature-wrapper">
         <img
-          src="/assets/18cosmos-superJumbo.jpg"
+          src="./assets/18cosmos-superJumbo.jpg"
           alt="Space cosmos"
         />
         <figcaption>
@@ -125,7 +125,7 @@
             </p>
           </div>
           <div class="inflation-container">
-              <img src="/assets/inflation-720.png" alt="">
+              <img src="./assets/inflation-720.png" alt="">
               <div class="row">
                   <p>
                     <span class="inflation-subheadings">THE UNIVERSE</span> is just under 14 billion years old. From our position
@@ -241,7 +241,7 @@
         ground,” Dr. Kovac said. He has been there 23 times, he said, wintering
         over in 1994. “I’ve been hooked ever since,” he said.
         <figure class="feature-wrapper article-img">
-          <img src="/assets/18cosmos-2-jumbo.jpg" alt="cosmos" />
+          <img src="./assets/18cosmos-2-jumbo.jpg" alt="cosmos" />
           <figcaption>
             The Bicep2 telescope, in the foreground, was used to detect the
             faint spiraling gravity patterns — the signature of a universe being
@@ -318,33 +318,33 @@
         <p>More in Space & Cosmos</p>
         <div class="grid">
             <div class="grid-item">
-                <img src="/assets/29TESS2-threeByTwoSmallAt2X.jpg" alt="">
+                <img src="./assets/29TESS2-threeByTwoSmallAt2X.jpg" alt="">
                 <p>NASA, via Reuters
                     NASA’s TESS Satellite Spots ‘Missing Link’ Exoplanets
                     July 29</p>
               </div>
               <div class="grid-item">
-                  <img src="/assets/31LIGHTSAIL-threeByTwoSmallAt2X.jpg" alt="">
+                  <img src="./assets/31LIGHTSAIL-threeByTwoSmallAt2X.jpg" alt="">
                   <p>LightSail-2 Mission Shows Solar Sailing’s Potential for Spaceflight
                       July 31</p>
                 </div>
                 <div class="grid-item">
-                    <img src="/assets/30TB-MARSTSUNAMI1-threeByTwoSmallAt2X.jpg" alt="">
+                    <img src="./assets/30TB-MARSTSUNAMI1-threeByTwoSmallAt2X.jpg" alt="">
                     <p>When a Mega-Tsunami Drowned Mars, This Spot May Have Been Ground Zero
                         July 30</p>
                   </div>
                   <div class="grid-item">
-                      <img src="/assets/apollo-11-moon-landing-photos-ul-1563466868618-threeByTwoSmallAt2X-v2.jpg" alt="">
+                      <img src="./assets/apollo-11-moon-landing-photos-ul-1563466868618-threeByTwoSmallAt2X-v2.jpg" alt="">
                       <p>The Apollo 11 Moon Landing in Augmented Reality
                           July 18</p>
                     </div>
                     <div class="grid-item">
-                        <img src="/assets/merlin_158047842_097b2fa3-612b-4f68-8c4c-bee2f79de109-threeByTwoSmallAt2X.jpg" alt="">
+                        <img src="./assets/merlin_158047842_097b2fa3-612b-4f68-8c4c-bee2f79de109-threeByTwoSmallAt2X.jpg" alt="">
                         <p>For 50 Years Since Apollo 11, Presidents Have Tried to Take That Next Giant Leap
                             July 19</p>
                       </div>
                       <div class="grid-item">
-                          <img src="/assets/17xp-telescope-threeByTwoSmallAt2X.jpg" alt="">
+                          <img src="./assets/17xp-telescope-threeByTwoSmallAt2X.jpg" alt="">
                           <p>Hawaiian Elders Protesting Telescope Construction Are Arrested
                               July 17</p>
                         </div>
@@ -352,16 +352,16 @@
         <p class="e-picks">Editor's Picks</p>
         <div class="grid">
             <div class="grid-item">
-                <img src="/assets/merlin_157068399_deb33e23-6dc0-467a-adee-86ec67a267ea-threeByTwoSmallAt2X.jpg" alt="">
+                <img src="./assets/merlin_157068399_deb33e23-6dc0-467a-adee-86ec67a267ea-threeByTwoSmallAt2X.jpg" alt="">
                 <p>That Noise? It’s the 1%, Helicoptering Over Your Traffic Jam
                     Aug. 1</p>
               </div>
               <div class="grid-item">
-                  <img src="/assets/04mag-screenland-1-threeByTwoSmallAt2X-v2.jpg" alt="">
+                  <img src="./assets/04mag-screenland-1-threeByTwoSmallAt2X-v2.jpg" alt="">
                   <p>When Gender Reveal Videos Go Spectacularly, Cathartically Wrong</p>
                 </div>
                 <div class="grid-item">
-                    <img src="/assets/03Lanawood-04-threeByTwoSmallAt2X-v3.jpg" alt="">
+                    <img src="./assets/03Lanawood-04-threeByTwoSmallAt2X-v3.jpg" alt="">
                     <p>Lana Wood, Natalie’s Little Sister, Has Plenty to Say
                         Aug. 3</p>
                   </div>
